10) kernel: raeth: ppe: move hoocks to raeth instead off external code if raeth static build (more consistent code generate).<br>
11) kernel: raeth: move raeth up in link order place (mast be before ppp and wireless modules for more consistent code generate).<br>
12) kernel: net: pppoe: missed check for destination addr in PADT frame processing.<br>
13) kernel: net: core: Remove redundant call to nf_reset in dev_forward_skb.<br>
14) kernel: net: skbuff: reduce struct size if nf_trace disable.<br>
15) kernel: net: exclude skb_recycle code from real build, small codesize reduce.<br>
16) kernel: net: revert route cache garbage collector changes introdused in 3.4.105 (~5% speed regression after this changes).<br>
<br>
<br>
<b>2.0.x</b><br>
1) init.d/goahead: add codel auto qos mode support in WebUI.<br>
2) init.d/goahead: remove simple tos based qos support(use port based or codel instead for).<br>
3) kernel: introduce and use generic init task.<br>
4) kernel: mips: backport some upstream fixes.<br>
5) kernel: irq: disallow commit to random entropy pool from every irq(decrease latency).<br>
6) kernel: enable BQL/DQL by default for 8Mb flash with DDR RAM devices(decrease latency).<br>
7) kernel: fastpath: cleanup and small optimize.<br>
8) kernel: inetdevice: fixed signed integer overflow.<br>
9) kernel: net/raeth: small cleanup.<br>
10) kernel: net: avoid to hang up on sending due to sysctl configuration overflow.<br>
11) kernel: net: ipmr: limit MRT_TABLE identifiers.<br>
12) kernel: net: net_sched: backport codel/fq_codel from 3.17 kernel tree.<br>
13) kernel: tcp: allow for bigger reordering level.<br>
14) kernel: netfilter: cttimeout: fix buffer overflow.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) add support dualstack ipv6/4 with dhcp v6/ra/6rd uplink support (need more info from ISP).<br>
3) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>